# UNOSprojects

./: CMakeLists.txt  FileManager.qml  Images.qrc  Main.qml  README.md  Wallpaper.qml  all_apps.txt  appmanager.cpp  appmanager.h  filemanager.cpp  filemanager.h  main.cpp  panel_apps.txt  windowmanager.cpp  windowmanager.h
